--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h4,h5,h6 {
 }
 h1,h2,h3,
 h4,h5,h6,p,ul,li,a,span {
-	margin:0;
+	margin:5;
 }
 a {
 	text-decoration: none;
@@ -79,7 +79,7 @@ a {
     width: 100%;
     height: 100%;
     max-width: 1920px;
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(0,0,0,.3);
     z-index: 2;
 }
 .yoga-template .banner .top-bar{
@@ -116,7 +116,7 @@ a {
 }
 .yoga-template .banner .top-bar-left a:hover,
 .yoga-template .banner .top-bar-right a:hover{
-	color:#fe86d4;
+	color:#00000;
 	text-decoration: none;
 }
 .yoga-template .banner .top-bar-left i,
@@ -160,9 +160,9 @@ a {
 	letter-spacing: 0.6px;
 	font-weight: 700;
 	padding: 21px 32px 19px;
-	background-color: #fe86d4;
-	color:#fff;
-	border-radius: 3px;
+	background-color: #ffffff;
+	color:#000;
+	border-radius: 6px;
 	text-transform: uppercase;
 }
 .yoga-template .banner .banner-content a.banner-btn:hover {
@@ -209,23 +209,23 @@ a {
 }
 .yoga-template .best-class-club .best-class-club-desc {
 	background-color: #f5f5f5;
-	padding: 20px 10px;
+	padding: 5px 5px;
 }
 .yoga-template .best-class-club .best-class-club-desc .club-section-title {
     font-family: 'Roboto Slab', serif;
-    font-size: 22px;
-    line-height: 30px;
-    color: #7b6cd5;
+    font-size: 25px;
+    line-height: 15px;
+    color: #000000;
     font-weight: 500;
 	text-align: left;
 }
 .yoga-template .best-class-club .best-class-club-desc ul {
   list-style: none;
-  padding: 0;
-  margin: 20px 0 13px;
+  padding: 10;
+  margin: 5px 0 5px;
 }
 .yoga-template .best-class-club .best-class-club-desc ul li {
-  padding-left: 1.3em;
+  padding-left: 0.0em;
   margin-bottom: 10px;
 }
 .yoga-template .best-class-club .best-class-club-desc ul li:before {
@@ -233,24 +233,24 @@ a {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   display: inline-block;
-  margin-left: -1.3em; 
-  width: 1.3em;
-  font-size: 12px;
-  line-height: 40px;
+  margin-left: 0.3em; 
+  width: 1.0em;
+  font-size: 10px;
+  line-height: 30px;
   color: #7b6cd5; 
 }
 .yoga-template .best-class-club .best-class-club-img {
 	background-image: url(../img/the-best-class-yoga.png);
     background-size: cover;
     background-position: center right;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
 }
 /*Advantages*/
 .yoga-template .advantages-section {
 	padding: 60px 15px 270px;
 }
 .yoga-template .advantages-section {
-	background-image: url(../img/advantages-of-yoga.png);
+	background-image: url(../img/advantages-of-yoga.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -268,14 +268,14 @@ a {
 	line-height: 25px;
 	letter-spacing: 0.6px;
 	font-weight: 600;
-	color: #444;
+	color: #000000;
 }
 .yoga-template .advantages-section .advantages-detail-desc {
 	font-family: inherit;
-	font-size: inherit;
-	line-height: 25px;
+	font-size: 15px;
+	line-height: 20px;
 	letter-spacing: 0.45px; 
-	color: #666;
+	color: #000000;
 }
 .yoga-template .advantages-section .advantages-detail-img svg{
 	max-width: 50px;
