--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,17 +36,19 @@
 	    background-position: center center;
 	}
 	.yoga-template  .advantages-section .section-title{
-		color: #fe86d4;
+	color: #000000;
 	}
 	.yoga-template  .advantages-section .section-title-desc {
 		color: #fff;
 	}
 	.yoga-template .advantages-section .advantages-detail-title {
-		color: #fe86d4;
+			color: #000000;
+
     	margin-top: 10px;
 	}
 	.yoga-template .advantages-section .advantages-detail-desc {
-		color: #fff;
+			color: #000000;
+
 	}
 	.yoga-template .advantages-section .advantages-detail-soul,
 	.yoga-template .advantages-section .advantages-detail-health,
