--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,6 +4,22 @@
 	.sections-detail {
 		margin: 0 0 30px;
 	}
+.video-container {
+    width: 100%;
+    height: 100vh; /* Full viewport height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Make the video responsive */
+.video-container video {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%; /* Full width of the container */
+    height: auto; /* Maintain aspect ratio */
+}
+
 	/*Banner*/
 	.yoga-template .banner .top-bar-left a {
 		font-size:17px;
