--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,7 +6,7 @@
 	}
 .video-container {
     width: 100%;
-    height: 100vh; /* Full viewport height */
+    height: 100%; /* Full viewport height */
     display: flex;
     justify-content: center;
     align-items: center;
