--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,19 @@ a {
 	color: #666;
 	text-align: center;
 }
+.video-container {
+    width: 100%;
+    height: 100vh; /* Full viewport height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.video-container video {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%; /* Full width of the container */
+    height: auto; /* Maintain aspect ratio */
+}
 /*Banner*/
 .yoga-template .banner {
 	background-image: url(../img/yoga-header.png);
